Issue #61: Add Detail browsing view for Music Artists.

--- a/serenity-app/res/layout/activity_music_track.xml
+++ b/serenity-app/res/layout/activity_music_track.xml
@@ -82,6 +82,7 @@
         android:src="@drawable/osd_rewind_nf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#50000000" 
         android:layout_marginLeft="120dp"
         android:layout_marginTop="10dp" 
         android:layout_below="@+id/mediacontroller_progress_layout"
@@ -91,7 +92,8 @@
         android:layout_marginTop="10dp" 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" 
-        android:src="@drawable/osd_pause_nf" 
+        android:src="@drawable/osd_pause_nf"
+        android:background="#50000000" 
         android:layout_below="@+id/mediacontroller_progress_layout"
         android:layout_toRightOf="@+id/audioSkipBack"
         />
@@ -101,6 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" 
         android:src="@drawable/osd_forward_nf" 
+        android:background="#50000000" 
         android:layout_below="@+id/mediacontroller_progress_layout"
         android:layout_toRightOf="@+id/audioPause"
         />
