--- a/serenity-app/res/layout/activity_music_track.xml
+++ b/serenity-app/res/layout/activity_music_track.xml
@@ -32,8 +32,11 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="40dp"
         android:descendantFocusability="afterDescendants"
+        android:nextFocusLeft="@+id/mediacontroller_seekbar"
         android:scrollbars="vertical"
-        android:scrollingCache="true" />
+        android:scrollingCache="true">
+        <requestFocus />
+     </ListView>
     
     <LinearLayout
         android:id="@+id/mediacontroller_progress_layout"
@@ -64,7 +67,9 @@
             android:focusable="true"
             android:max="1000"
             android:minWidth="300dp"
-            android:nextFocusDown="@+id/mediacontroller_play_pause" />
+            android:nextFocusUp="@+id/audioTracksListview"
+            android:nextFocusDown="@+id/audioPause"
+            android:nextFocusRight="@+id/audioTracksListview" />
 
         <TextView
             android:id="@+id/mediacontroller_time_total"
@@ -85,6 +90,8 @@
         android:background="#50000000" 
         android:layout_marginLeft="120dp"
         android:layout_marginTop="10dp" 
+        android:nextFocusUp="@+id/mediacontroller_seekbar"
+        android:nextFocusRight="@+id/audioPause"
         android:layout_below="@+id/mediacontroller_progress_layout"
         />
     
@@ -94,6 +101,8 @@
         android:layout_height="wrap_content" 
         android:src="@drawable/osd_pause_nf"
         android:background="#50000000" 
+        android:nextFocusLeft="@+id/audioSkipBack"
+        android:nextFocusRight="@+id/audioSkipForward"
         android:layout_below="@+id/mediacontroller_progress_layout"
         android:layout_toRightOf="@+id/audioSkipBack"
         />
@@ -106,6 +115,9 @@
         android:background="#50000000" 
         android:layout_below="@+id/mediacontroller_progress_layout"
         android:layout_toRightOf="@+id/audioPause"
+        android:nextFocusRight="@+id/audioTracksListview"
+        android:nextFocusUp="@+id/mediacontroller_seekbar"
+        android:nextFocusLeft="@+id/audioPause"
         />
     
 
