--- a/serenity-app/res/layout/activity_music_track.xml
+++ b/serenity-app/res/layout/activity_music_track.xml
@@ -84,14 +84,14 @@
     </LinearLayout>
     
     <ImageButton android:id="@+id/audioSkipBack"
-        android:src="@drawable/osd_rewind_nf"
+        android:src="@drawable/skipback_selector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#50000000" 
         android:layout_marginLeft="120dp"
         android:layout_marginTop="10dp" 
         android:nextFocusUp="@+id/mediacontroller_seekbar"
-        android:nextFocusRight="@+id/audioPause"
+        android:nextFocusRight="@+id/audioPause"        
         android:layout_below="@+id/mediacontroller_progress_layout"
         />
     
@@ -99,8 +99,8 @@
         android:layout_marginTop="10dp" 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" 
-        android:src="@drawable/osd_pause_nf"
-        android:background="#50000000" 
+        android:background="#50000000"
+        android:src="@drawable/pause_selector"
         android:nextFocusLeft="@+id/audioSkipBack"
         android:nextFocusRight="@+id/audioSkipForward"
         android:layout_below="@+id/mediacontroller_progress_layout"
@@ -111,7 +111,7 @@
         android:layout_marginTop="10dp" 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" 
-        android:src="@drawable/osd_forward_nf" 
+        android:src="@drawable/skipforward_selector"
         android:background="#50000000" 
         android:layout_below="@+id/mediacontroller_progress_layout"
         android:layout_toRightOf="@+id/audioPause"
