--- a/serenity-app/res/layout/serenity_media_controller.xml
+++ b/serenity-app/res/layout/serenity_media_controller.xml
@@ -43,6 +43,7 @@
         tools:ignore="ContentDescription" />
 
     <LinearLayout
+        android:orientation="horizontal"
         android:id="@+id/mediacontroller_infographic_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
