Issue #96: Improve Gallery Scrolling Performance
The galleries are jerky when scrolling.  This change sets the
Gallery to not do call backs while it is flinging.  Thus the background
image isn't always changing when it shouldn't be changing.

--- a/serenity-app/res/layout/activity_movie_browser.xml
+++ b/serenity-app/res/layout/activity_movie_browser.xml
@@ -4,10 +4,14 @@
     android:id="@+id/movieBrowserBackgroundLayout"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/movies"
     android:orientation="vertical"
     android:padding="5dp"
     tools:context=".ui.browser.movie.MovieBrowserActivity" >
+    
+    <ImageView android:id="@+id/fanArt"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+     />        
     
     <LinearLayout
         android:id="@+id/metaDataRow"
