Some general spit and polish for the UI.
1. Make sure that button presses in HUD show state changes.
2. Add padding to HUD display text for title and summary.

--- a/serenity-app/res/drawable/skipforward_selector.xml
+++ b/serenity-app/res/drawable/skipforward_selector.xml
@@ -18,6 +18,7 @@
 
     <item android:drawable="@drawable/osd_forward_nf" android:state_activated="true"/>
     <item android:drawable="@drawable/osd_forward_fo" android:state_focused="true"/>
+    <item android:drawable="@drawable/osd_forward_fo" android:state_pressed="true"/>
     <item android:drawable="@drawable/osd_forward_nf"/>
 
 </selector>
