--- a/serenity-app/res/drawable/pause_selector.xml
+++ b/serenity-app/res/drawable/pause_selector.xml
@@ -18,6 +18,7 @@
 
     <item android:drawable="@drawable/osd_pause_nf" android:state_activated="true"/>
     <item android:drawable="@drawable/osd_pause_fo" android:state_focused="true"/>
+    <item android:drawable="@drawable/osd_pause_fo" android:state_pressed="true"/>
     <item android:drawable="@drawable/osd_pause_nf"/>
 
 </selector>
