--- a/serenity-app/res/layout/activity_plex_app_main.xml
+++ b/serenity-app/res/layout/activity_plex_app_main.xml
@@ -7,14 +7,15 @@
     tools:context=".MainActivity" >
     
     <ImageView android:id="@+id/mainGalleryBackground" 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_centerInParent="true"
         android:src="@drawable/serenity_bonsai_logo"/>
     
     <DigitalClock
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:background="#50000000"
             android:textColor="#F0F0F0"
             android:layout_alignParentLeft="true"
@@ -23,6 +24,8 @@
 
      <Gallery
          android:id="@+id/mainGalleryMenu"
+         android:layout_marginLeft="10dp"
+         android:layout_marginRight="10dp"
          android:layout_width="match_parent"
          android:layout_height="150dp"
          android:animationDuration="1"
