--- a/serenity-app/res/layout/serenity_media_controller.xml
+++ b/serenity-app/res/layout/serenity_media_controller.xml
@@ -13,6 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:padding="5dp"
         android:background="#80000000"
         android:gravity="top"
         android:textStyle="bold"
@@ -26,6 +27,7 @@
         android:layout_below="@+id/mediacontroller_title"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:padding="5dp"
         android:background="#80000000"
         android:gravity="top"
         android:maxLines="5"
@@ -37,6 +39,7 @@
         android:layout_height="200dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"
         android:paddingBottom="10dp"
         android:scaleType="centerInside"
         android:src="@drawable/default_video_cover"
