--- a/serenity-app/res/layout/activity_music_track.xml
+++ b/serenity-app/res/layout/activity_music_track.xml
@@ -56,17 +56,17 @@
             android:layout_gravity="left"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:text="00:00"
+            android:text="00:00:00"
             android:textColor="#F0F0F0"
             tools:ignore="SelectableText" />
 
         <SeekBar
             android:id="@+id/mediacontroller_seekbar"
-            android:layout_width="300dp"
+            android:layout_width="250dp"
             android:layout_height="15dp"
             android:focusable="true"
             android:max="1000"
-            android:minWidth="300dp"
+            android:minWidth="250dp"
             android:nextFocusUp="@+id/audioTracksListview"
             android:nextFocusDown="@+id/audioPause"
             android:nextFocusRight="@+id/audioTracksListview" />
@@ -78,7 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:textColor="#F0F0F0"
-            android:text="00:00"
+            android:text="00:00:00"
             tools:ignore="SelectableText" />
 
     </LinearLayout>
@@ -88,7 +88,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#50000000" 
-        android:layout_marginLeft="120dp"
+        android:layout_marginLeft="140dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="10dp" 
         android:nextFocusUp="@+id/mediacontroller_seekbar"
         android:nextFocusRight="@+id/audioPause"        
@@ -101,6 +102,8 @@
         android:layout_height="wrap_content" 
         android:background="#50000000"
         android:src="@drawable/pause_selector"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:nextFocusLeft="@+id/audioSkipBack"
         android:nextFocusRight="@+id/audioSkipForward"
         android:layout_below="@+id/mediacontroller_progress_layout"
@@ -112,7 +115,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" 
         android:src="@drawable/skipforward_selector"
-        android:background="#50000000" 
+        android:background="#50000000"
+        android:layout_marginLeft="10dp" 
+        android:layout_marginRight="10dp"
         android:layout_below="@+id/mediacontroller_progress_layout"
         android:layout_toRightOf="@+id/audioPause"
         android:nextFocusRight="@+id/audioTracksListview"
