--- a/serenity-app/res/layout-w600dp/activity_tvbrowser_show_posters.xml
+++ b/serenity-app/res/layout-w600dp/activity_tvbrowser_show_posters.xml
@@ -16,7 +16,7 @@
 
         <TextView
             android:id="@+id/tvshow_CategoryName"
-            style="@android:style/TextAppearance.Medium"
+            style="@android:style/TextAppearance.Holo.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -99,7 +99,7 @@
 
         <TextView
             android:id="@+id/tvBrowserTitle"
-            style="@android:style/TextAppearance.Large"
+            style="@android:style/TextAppearance.Holo.Large"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
@@ -112,7 +112,7 @@
 
         <TextView
             android:id="@+id/tvShowSeriesSummary"
-            style="@android:style/TextAppearance.Medium"
+            style="@android:style/TextAppearance.Holo.Medium"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dip"
@@ -126,7 +126,7 @@
 
         <TextView
             android:id="@+id/tvShowBrowserGenre"
-            style="@android:style/TextAppearance.Medium"
+            style="@android:style/TextAppearance.Holo.Medium"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
@@ -138,7 +138,7 @@
 
         <TextView
             android:id="@+id/tvShowWatchedUnwatched"
-            style="@android:style/TextAppearance.Medium"
+            style="@android:style/TextAppearance.Holo.Medium"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dip"
