--- a/serenity-app/res/drawable/spinner_item_background.xml
+++ b/serenity-app/res/drawable/spinner_item_background.xml
@@ -17,7 +17,7 @@
     <item android:state_activated="true"
         android:drawable="@android:color/darker_gray"
         />
-    <item android:state_selected="true" android:drawable="@color/orange" android:state_pressed="false"/>
+    <item android:state_selected="true" android:drawable="@color/holo_color" android:state_pressed="false"/>
     <item
         android:drawable="@android:color/background_dark"
         />
