--- a/serenity-app/res/layout-w600dp/activity_movie_browser_gridview.xml
+++ b/serenity-app/res/layout-w600dp/activity_movie_browser_gridview.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/musicBrowserBackgroundLayout"
+    android:id="@+id/movieBrowserBackgroundLayout"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/music"
+    android:background="@drawable/movies"
     android:orientation="vertical"
     android:padding="5dp"
-    tools:context=".ui.browser.music.MusicActivity" xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity">
+    tools:context=".ui.browser.movie.MovieBrowserActivity" xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity">
 
     <LinearLayout
         android:id="@+id/metaDataRow"
@@ -20,7 +20,7 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/musicCategoryName"
+            android:id="@+id/movieCategoryName"
             style="@android:style/TextAppearance.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
             android:text="@string/category" />
 
         <Spinner
-            android:id="@+id/musicCategoryFilter"
+            android:id="@+id/movieCategoryFilter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -40,7 +40,7 @@
             android:spinnerMode="dropdown" />
 
         <Spinner
-            android:id="@+id/musicCategoryFilter2"
+            android:id="@+id/movieCategoryFilter2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -51,8 +51,29 @@
             android:spinnerMode="dropdown"
             android:visibility="invisible" />
 
+        <TextView
+            android:id="@+id/subtitleFilter"
+            style="@android:style/TextAppearance.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:focusable="false"
+            android:text="Subtitle"
+            android:visibility="gone" />
+
+        <Spinner
+            android:id="@+id/videoSubtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/spinner_background"
+            android:focusable="true"
+            android:gravity="left"
+            android:prompt="@string/movie_category_prompt2"
+            android:spinnerMode="dropdown"
+            android:visibility="gone" />
         
-        <TextView android:id="@+id/musicTitle"
+        <TextView android:id="@+id/movieBrowserPosterTitle"
             style="@android:style/TextAppearance.Medium"
             android:textStyle="bold"
             android:layout_width="wrap_content"
@@ -64,7 +85,7 @@
 
     <com.jess.ui.TwoWayGridView
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/musicGridView"
+        android:id="@+id/movieGridView"
         android:layout_below="@+id/metaDataRow"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
