--- a/serenity-app/res/layout-w600dp/activity_music_artist_gridview.xml
+++ b/serenity-app/res/layout-w600dp/activity_music_artist_gridview.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/movieBrowserBackgroundLayout"
+    android:id="@+id/musicBrowserBackgroundLayout"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/movies"
+    android:background="@drawable/music"
     android:orientation="vertical"
     android:padding="5dp"
-    tools:context=".ui.browser.movie.MovieBrowserActivity" xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity">
+    tools:context=".ui.browser.music.MusicActivity" xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity">
 
     <LinearLayout
         android:id="@+id/metaDataRow"
@@ -20,8 +20,8 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/movieCategoryName"
-            style="@android:style/TextAppearance.Holo.Small"
+            android:id="@+id/musicCategoryName"
+            style="@android:style/TextAppearance.Holo.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -29,7 +29,7 @@
             android:text="@string/category" />
 
         <Spinner
-            android:id="@+id/movieCategoryFilter"
+            android:id="@+id/musicCategoryFilter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -40,7 +40,7 @@
             android:spinnerMode="dropdown" />
 
         <Spinner
-            android:id="@+id/movieCategoryFilter2"
+            android:id="@+id/musicCategoryFilter2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -51,30 +51,9 @@
             android:spinnerMode="dropdown"
             android:visibility="invisible" />
 
-        <TextView
-            android:id="@+id/subtitleFilter"
-            style="@android:style/TextAppearance.Holo.Small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:focusable="false"
-            android:text="Subtitle"
-            android:visibility="gone" />
-
-        <Spinner
-            android:id="@+id/videoSubtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/spinner_background"
-            android:focusable="true"
-            android:gravity="left"
-            android:prompt="@string/movie_category_prompt2"
-            android:spinnerMode="dropdown"
-            android:visibility="gone" />
         
-        <TextView android:id="@+id/movieBrowserPosterTitle"
-            style="@android:style/TextAppearance.Medium"
+        <TextView android:id="@+id/musicTitle"
+            style="@android:style/TextAppearance.Holo.Medium"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -85,7 +64,7 @@
 
     <com.jess.ui.TwoWayGridView
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/movieGridView"
+        android:id="@+id/musicGridView"
         android:layout_below="@+id/metaDataRow"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -94,10 +73,12 @@
         android:padding="5dp"
         android:background="#80000000"
         app:cacheColorHint="#E8E8E8"
+        app:columnWidth="160dp"
         app:gravity="center"
         app:horizontalSpacing="16dp"
         app:numColumns="auto_fit"
-        app:numRows="2"
+        app:numRows="3"
+        app:rowHeight="160dp"
         app:scrollDirectionLandscape="horizontal"
         app:scrollDirectionPortrait="vertical"
         app:stretchMode="spacingWidthUniform"
