--- a/serenity-app/res/layout-w600dp/activity_tvbrowser_show_seasons.xml
+++ b/serenity-app/res/layout-w600dp/activity_tvbrowser_show_seasons.xml
@@ -15,23 +15,23 @@
 
         <TextView
             android:id="@+id/tvShowSeasonsDetailText"
+            style="@android:style/TextAppearance.Holo.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:textColor="#F0F0F0"
-            android:textSize="20sp"
             tools:ignore="SelectableText" >
 
         </TextView>
 
         <TextView
             android:id="@+id/tvShowSeasonsItemCount"
+            style="@android:style/TextAppearance.Holo.Medium"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:gravity="right"
             android:textColor="#F0F0F0"
-            android:textSize="20sp"
             tools:ignore="SelectableText" >
 
         </TextView>
@@ -46,11 +46,11 @@
         
         <TextView
             android:id="@+id/tvShowSeasonsTitle"
+            style="@android:style/TextAppearance.Holo.Medium"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textColor="#F0F0F0"
-            android:textSize="20sp"
             tools:ignore="SelectableText" >
 
         </TextView>
