--- a/serenity-app/res/layout-w600dp/audio_playback.xml
+++ b/serenity-app/res/layout-w600dp/audio_playback.xml
@@ -20,6 +20,6 @@
         android:gravity="center"
         android:layout_centerHorizontal="true"
         android:visibility="invisible"
-        style="@android:style/TextAppearance.Large"/>
+        style="@android:style/TextAppearance.Holo.Large"/>
 
 </RelativeLayout>
