--- a/serenity-app/res/layout-w600dp/serenity_spinner_textview.xml
+++ b/serenity-app/res/layout-w600dp/serenity_spinner_textview.xml
@@ -2,7 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/textViewSpinnerItem"
-    style="@android:style/TextAppearance.Medium"
+    style="@android:style/TextAppearance.Holo.Medium"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:textColor="@android:color/white"
