--- a/serenity-app/res/layout-w600dp/serenity_spinner_textview_dropdown.xml
+++ b/serenity-app/res/layout-w600dp/serenity_spinner_textview_dropdown.xml
@@ -3,7 +3,7 @@
     android:id="@+id/textViewSpinnerItemDropDown" 
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content"
-    style="@android:style/TextAppearance.Medium"
+    style="@android:style/TextAppearance.Holo.Medium"
     android:textColor="@android:color/white"
     android:background="@drawable/spinner_item_background"
     android:padding="5dp" 
