--- a/serenity-app/res/layout-w600dp/track_listview_layout.xml
+++ b/serenity-app/res/layout-w600dp/track_listview_layout.xml
@@ -16,7 +16,7 @@
         android:layout_toRightOf="@+id/trackPlayed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@android:style/TextAppearance.Large"
+        style="@android:style/TextAppearance.Holo.Large"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
         android:textColor="#F0F0F0"
@@ -27,7 +27,7 @@
         android:gravity="right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@android:style/TextAppearance.Large"
+        style="@android:style/TextAppearance.Holo.Large"
         android:textColor="#F0F0F0"
         android:layout_marginRight="5dp"
         />
