--- a/serenity-app/res/layout/activity_movie_browser.xml
+++ b/serenity-app/res/layout/activity_movie_browser.xml
@@ -7,12 +7,12 @@
     android:orientation="vertical"
     android:padding="5dp"
     tools:context=".ui.browser.movie.MovieBrowserActivity" >
-    
-    <ImageView android:id="@+id/fanArt"
+
+    <ImageView
+        android:id="@+id/fanArt"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-     />        
-    
+        android:layout_height="fill_parent" />
+
     <LinearLayout
         android:id="@+id/metaDataRow"
         android:layout_width="fill_parent"
@@ -30,8 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:focusable="false"
-            android:text="@string/category"
-            tools:ignore="NewApi" />
+            android:text="@string/category" />
 
         <Spinner
             android:id="@+id/movieCategoryFilter"
@@ -55,17 +54,17 @@
             android:prompt="@string/movie_category_prompt2"
             android:spinnerMode="dropdown"
             android:visibility="invisible" />
-        
+
         <TextView
             android:id="@+id/subtitleFilter"
+            style="@android:style/TextAppearance.Holo.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:focusable="false"
             android:text="Subtitle"
-            android:visibility="gone"
-            style="@android:style/TextAppearance.Holo.Small" />
-        
+            android:visibility="gone" />
+
         <Spinner
             android:id="@+id/videoSubtitle"
             android:layout_width="wrap_content"
@@ -77,228 +76,17 @@
             android:prompt="@string/movie_category_prompt2"
             android:spinnerMode="dropdown"
             android:visibility="gone" />
-        
     </LinearLayout>
-    
-
-    <LinearLayout
-        android:id="@+id/video_title_row"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/episodeTVSeriesTitle"
-        android:layout_toRightOf="@+id/video_details_2"
-        android:layout_marginRight="6dp"
-        android:background="#80000000"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/movieBrowserPosterTitle"
-            style="@android:style/TextAppearance.Large"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:gravity="left"
-            android:paddingLeft="10dp"
-            android:textColor="#F0F0F0"
-            android:textStyle="bold"
-            tools:ignore="SelectableText" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/video_details"
-        android:layout_width="200dp"
-        android:layout_height="180dp"
-        android:layout_below="@+id/episodeTVSeriesTitle"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="4.5dp"
-        android:layout_centerHorizontal="true"
-        android:background="#80000000"
-        android:orientation="vertical"
-        android:paddingBottom="5dp" >
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:minWidth="50dp"
-                android:text="@string/year"
-                style="@android:style/TextAppearance.Holo.Small"
-                android:textStyle="bold"
-                />
-
-            <TextView
-                android:id="@+id/video_year"
-                style="@android:style/TextAppearance.Holo.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:gravity="left"
-                android:lines="2"
-                android:minWidth="50dp"
-                tools:ignore="SelectableText" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                
-                android:minWidth="100dp"
-                android:text="@string/genre"
-                style="@android:style/TextAppearance.Holo.Small"
-                android:textStyle="bold"
-                />
-
-            <TextView
-                android:id="@+id/video_genre"
-                style="@android:style/TextAppearance.Holo.Small"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:gravity="left"
-                android:lines="5"
-                android:minWidth="100dp"
-                tools:ignore="SelectableText" />
-        
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/video_details_2"
-        android:layout_width="200dp"
-        android:layout_height="180dp"
-        android:layout_below="@+id/episodeTVSeriesTitle"
-        android:layout_toRightOf="@+id/video_details"
-        android:background="#80000000"
-        android:orientation="vertical"
-        android:paddingBottom="5dp" >
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                
-                android:minWidth="50dp"
-                android:text="@string/writers"
-                style="@android:style/TextAppearance.Medium"
-                android:textStyle="bold"
-                />
-
-            <TextView
-                android:id="@+id/video_writers"
-                style="@android:style/TextAppearance.Holo.Small"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:gravity="left"
-                android:lines="2"
-                android:minWidth="50dp"
-                tools:ignore="SelectableText" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                
-                android:minWidth="50dp"
-                android:text="@string/directors"
-                style="@android:style/TextAppearance.Holo.Small"
-                android:textStyle="bold"
-                />
-
-            <TextView
-                android:id="@+id/video_directors"
-                style="@android:style/TextAppearance.Holo.Small"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:gravity="left"
-                android:lines="4"
-                android:maxLines="4"
-                android:minWidth="50dp"
-                tools:ignore="SelectableText" />
-        
-    </LinearLayout>
-    
-    
-    
-    <LinearLayout
-        android:id="@+id/video_summary_row"
-        android:layout_width="fill_parent"
-        android:layout_height="150.5dp"
-        android:layout_below="@+id/video_title_row"
-        android:layout_toRightOf="@+id/video_details_2"
-        android:layout_marginRight="6dp"
-        android:background="#80000000"
-        android:orientation="horizontal"
-        android:paddingBottom="5dp" >
-
-            <TextView
-                android:id="@+id/movieSummary"
-                style="@android:style/TextAppearance.Holo.Small"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:lines="8"
-                android:maxLines="8"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:textColor="#F0F0F0"
-                tools:ignore="SelectableText" />
-        
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/movieInfoGraphicLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/video_details"
-        android:layout_centerHorizontal="true"
-        android:layout_marginRight="10dp"
-        android:background="#80000000"
-        android:orientation="horizontal" >
-    </LinearLayout>
-    
-    <LinearLayout
-        android:id="@+id/videoSelectedExtra"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginRight="10dp"
-        android:layout_above="@+id/tableRow2"
-        android:orientation="horizontal" >
-            
-        <TextView android:id="@+id/videoTextExtra"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:visibility="invisible"
-            android:background="#D0000000"
-            style="@android:style/TextAppearance.Holo.Small"
-            android:textStyle="bold"
-            />
-    </LinearLayout>
-    
 
     <LinearLayout
         android:id="@+id/tableRow2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="20dip"
-        android:layout_marginRight="10dp"
         android:layout_marginTop="5dip"
-        android:padding="5dp"
+        android:layout_below="@+id/metaDataRow"
+        android:background="#AA000000"
         android:gravity="bottom"
-        android:background="#AA000000" >
+        android:padding="5dp" >
 
         <us.nineworlds.serenity.widgets.SerenityGallery
             android:id="@+id/moviePosterGallery"
@@ -310,17 +98,198 @@
             <requestFocus />
         </us.nineworlds.serenity.widgets.SerenityGallery>
     </LinearLayout>
-    
-    <TextView android:id="@+id/episodeTVSeriesTitle"
+
+    <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dp"
-        android:layout_below="@+id/metaDataRow"
-        style="@android:style/TextAppearance.Holo.Medium"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:background="#80000000"
-        android:visibility="gone"/>
+        android:layout_below="@+id/tableRow2" >
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:id="@+id/video_title_row"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="6dp"
+                android:background="#80000000"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/movieBrowserPosterTitle"
+                    style="@android:style/TextAppearance.Holo.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:gravity="left"
+                    android:paddingLeft="10dp"
+                    android:textColor="#F0F0F0"
+                    android:textStyle="bold"
+                    tools:ignore="SelectableText" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/video_summary_row"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="6dp"
+                android:background="#80000000"
+                android:orientation="horizontal"
+                android:paddingBottom="5dp" >
+
+                <TextView
+                    android:id="@+id/movieSummary"
+                    style="@android:style/TextAppearance.Holo.Small"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:lines="8"
+                    android:maxLines="8"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:textColor="#F0F0F0"
+                    tools:ignore="SelectableText" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/movieInfoGraphicLayout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:background="#80000000"
+                android:orientation="horizontal" >
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/video_details_2"
+                android:layout_width="200dp"
+                android:layout_height="180dp"
+                android:background="#80000000"
+                android:orientation="vertical"
+                android:paddingBottom="5dp" >
+
+                <TextView
+                    style="@android:style/TextAppearance.Holo.Small"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:minWidth="50dp"
+                    android:text="@string/writers"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/video_writers"
+                    style="@android:style/TextAppearance.Holo.Small"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:gravity="left"
+                    android:lines="2"
+                    android:minWidth="50dp"
+                    tools:ignore="SelectableText" />
+
+                <TextView
+                    style="@android:style/TextAppearance.Holo.Small"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:minWidth="50dp"
+                    android:text="@string/directors"
+                    android:textStyle="bold"
+                    tools:ignore="NewApi" />
+
+                <TextView
+                    android:id="@+id/video_directors"
+                    style="@android:style/TextAppearance.Holo.Small"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:gravity="left"
+                    android:lines="4"
+                    android:maxLines="4"
+                    android:minWidth="50dp"
+                    tools:ignore="SelectableText" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/video_details"
+                android:layout_width="200dp"
+                android:layout_height="180dp"
+                android:layout_marginLeft="4.5dp"
+                android:background="#80000000"
+                android:orientation="vertical"
+                android:paddingBottom="5dp" >
+
+                <TextView
+                    style="@android:style/TextAppearance.Holo.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:minWidth="50dp"
+                    android:text="@string/year"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/video_year"
+                    style="@android:style/TextAppearance.Holo.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:gravity="left"
+                    android:lines="2"
+                    android:minWidth="50dp"
+                    tools:ignore="SelectableText" />
+
+                <TextView
+                    style="@android:style/TextAppearance.Holo.Small"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:minWidth="100dp"
+                    android:text="@string/genre"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/video_genre"
+                    style="@android:style/TextAppearance.Holo.Small"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:gravity="left"
+                    android:lines="5"
+                    android:minWidth="100dp"
+                    tools:ignore="SelectableText" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/videoSelectedExtra"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/videoTextExtra"
+                    style="@android:style/TextAppearance.Holo.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="#D0000000"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:visibility="invisible" />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
